sandbox/output
StockProfit.tests.cpp:46:31: error: use of undeclared identifier 'priceValues'; did you mean 'pricesValue'?
    int pricesLength = sizeof(priceValues) / sizeof(int);
                              ^~~~~~~~~~~
                              pricesValue
StockProfit.tests.cpp:45:9: note: 'pricesValue' declared here
    int pricesValue[] = {1};
        ^
StockProfit.tests.cpp:59:31: error: use of undeclared identifier 'priceValues'; did you mean 'pricesValue'?
    int pricesLength = sizeof(priceValues) / sizeof(int);
                              ^~~~~~~~~~~
                              pricesValue
StockProfit.tests.cpp:58:9: note: 'pricesValue' declared here
    int pricesValue[] = {1};
        ^
2 errors generated.
make: *** [test] Error 1
